Webapp-yaml/deploiement-webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dep-#{namespace}#
  namespace: #{namespace}#
  labels:
    app: GestionEquipeSportive
    tier: web
spec:
  replicas: #{miseEchelleQuantite}#
  selector:
    matchLabels:
      app: GestionEquipeSportive
      tier: web
  template:
    metadata:
      labels:
        app: GestionEquipeSportive
        tier: web
    spec:
      containers:
        - name: gestion-equipe-sportive
          image: kevin012/gestionEquipeSportive
          ports:
           - name: http
             containerPort: 80
