Webapp-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: #{namespace}#
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: webreact-#{namespace}#.#{httpApplicationRoutingZoneName}#
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc-#{namespace}#
            port:
              number: 80
